--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,9 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css",
               "src/assets/css/bootstrap.min.css"
-
             ],
             "scripts": [
               "src/assets/js/jquery-3.5.1.slim.min.js",
@@ -94,6 +94,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
